--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.0.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@expo/vector-icons": "^12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
